[gd_scene load_steps=38 format=3 uid="uid://p5sgkf8e53l1"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_brsg7"]
[ext_resource type="Script" path="res://Player/EndUI.gd" id="3_0e1w3"]
[ext_resource type="Texture2D" uid="uid://ddnvk3n3b4yxg" path="res://Weapons/poison_icon.png" id="4_62vww"]
[ext_resource type="Script" path="res://Player/PauseUI.gd" id="4_smkue"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_45sbc"]
size = Vector2(36, 45)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_68ltt"]
bg_color = Color(0, 0, 0, 0.392157)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cc1o4"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="LabelSettings" id="LabelSettings_7s40b"]
font_size = 20
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1nj47"]
bg_color = Color(0, 1, 0.905882, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pum4f"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.125911, 0.125911, 0.125911, 1)
skew = Vector2(0.1, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.8, 0, 1, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ggyr1"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.215902, 0.215902, 0.215902, 1)
skew = Vector2(0.1, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.8, 0, 1, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_76dtg"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.12549, 0.12549, 0.12549, 1)
skew = Vector2(0.1, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.8, 0, 0.8, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n4yrc"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.215686, 0.215686, 0.215686, 1)
skew = Vector2(0.1, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.8, 0, 0.8, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8veh0"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.12549, 0.12549, 0.12549, 1)
skew = Vector2(0.1, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.8, 0, 0.8, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pphx1"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.215686, 0.215686, 0.215686, 1)
skew = Vector2(0.1, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.8, 0, 0.8, 1)
border_blend = true

[sub_resource type="LabelSettings" id="LabelSettings_a7snn"]
font_size = 20
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_l3iak"]
font_size = 20
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_apqu2"]
load_path = "res://.godot/imported/fireball_icon.png-eaaf5decdec7a074de6146a74b820b9e.ctex"

[sub_resource type="LabelSettings" id="LabelSettings_sml3a"]
font_size = 20
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ajs5s"]
load_path = "res://.godot/imported/thunder_icon.png-6928e79d64ed6003ca4bc54570e0814f.ctex"

[sub_resource type="LabelSettings" id="LabelSettings_xwmqv"]
font_size = 20
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_njfm1"]
load_path = "res://.godot/imported/laser_icon.png-029b19a4fd28b338126a34f644ac8473.ctex"

[sub_resource type="LabelSettings" id="LabelSettings_jf2ri"]
font_size = 20
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_xre5p"]
load_path = "res://.godot/imported/void_icon.png-45387b39401d81c014addbaf2fcd6b7c.ctex"

[sub_resource type="LabelSettings" id="LabelSettings_k5yc7"]
font_size = 20
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_iv02w"]
font_size = 20
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_b6pbi"]
load_path = "res://.godot/imported/atk_damage_icon.png-7a927b6fbba749bf6427f8559f6b0369.ctex"

[sub_resource type="LabelSettings" id="LabelSettings_84sxk"]
font_size = 20
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_sj334"]
load_path = "res://.godot/imported/atk_speed_icon.png-2ce512ccbfcdcac6906cf796e1eb44cd.ctex"

[sub_resource type="LabelSettings" id="LabelSettings_l4anv"]
font_size = 20
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_2qgn0"]
load_path = "res://.godot/imported/atk_count_icon.png-a55904cf53d21d7ab977a4b540418152.ctex"

[sub_resource type="LabelSettings" id="LabelSettings_fedu2"]
font_size = 20
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_46ydx"]
load_path = "res://.godot/imported/health_icon.png-7968e96ce0eb0f934fdb9b47d478c95c.ctex"

[sub_resource type="LabelSettings" id="LabelSettings_iixmy"]
font_size = 20
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_2pgfj"]
load_path = "res://.godot/imported/move_speed_icon.png-bf3252a3455f67f039a57d3107bbf4dc.ctex"

[sub_resource type="LabelSettings" id="LabelSettings_33t6d"]
font_size = 20
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_dwdjn"]
font_size = 10
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 1
script = ExtResource("1_brsg7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_45sbc")

[node name="HealthBar" type="ProgressBar" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = 30.0
offset_right = 35.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_68ltt")
theme_override_styles/fill = SubResource("StyleBoxFlat_cc1o4")
value = 50.0
show_percentage = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatsLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = -12.0
offset_top = 190.0
offset_right = 88.0
offset_bottom = 218.0
text = "Lv 100"
label_settings = SubResource("LabelSettings_7s40b")
horizontal_alignment = 1

[node name="ExpBar" type="ProgressBar" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -546.0
offset_top = -99.0
offset_right = -531.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_1nj47")
value = 50.0
fill_mode = 3
show_percentage = false

[node name="UpgradeList" type="VBoxContainer" parent="CanvasLayer/Control"]
process_mode = 2
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -50.5
offset_right = 78.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Button0" type="Button" parent="CanvasLayer/Control/UpgradeList"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_pum4f")
theme_override_styles/hover = SubResource("StyleBoxFlat_ggyr1")

[node name="Button1" type="Button" parent="CanvasLayer/Control/UpgradeList"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_76dtg")
theme_override_styles/hover = SubResource("StyleBoxFlat_n4yrc")

[node name="Button2" type="Button" parent="CanvasLayer/Control/UpgradeList"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_8veh0")
theme_override_styles/hover = SubResource("StyleBoxFlat_pphx1")

[node name="PauseUI" type="Control" parent="CanvasLayer/Control"]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_smkue")

[node name="DamageDealtLabel" type="RichTextLabel" parent="CanvasLayer/Control/PauseUI"]
layout_mode = 0
offset_left = 1005.0
offset_top = 195.0
offset_right = 1147.0
offset_bottom = 493.0
text = "fireball: 100000"

[node name="PauseButtons" type="VBoxContainer" parent="CanvasLayer/Control/PauseUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.5
offset_top = -33.0
offset_right = 39.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButton" type="Button" parent="CanvasLayer/Control/PauseUI/PauseButtons"]
layout_mode = 2
text = "Continue"

[node name="ExitButton" type="Button" parent="CanvasLayer/Control/PauseUI/PauseButtons"]
layout_mode = 2
text = "Exit"

[node name="EndUI" type="Control" parent="CanvasLayer/Control"]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_0e1w3")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/EndUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="RecordLevel" type="Label" parent="CanvasLayer/Control/EndUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Level: 100"
label_settings = SubResource("LabelSettings_a7snn")
horizontal_alignment = 1

[node name="Back" type="Button" parent="CanvasLayer/Control/EndUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = 84.5
offset_right = 22.5
offset_bottom = 115.5
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[node name="KillsLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 735.0
offset_top = 12.0
offset_right = 1135.0
offset_bottom = 62.0
text = "kills:"
label_settings = SubResource("LabelSettings_l3iak")
horizontal_alignment = 2

[node name="fireballIcon" type="Sprite2D" parent="CanvasLayer/Control"]
visible = false
scale = Vector2(3, 3)
texture = SubResource("CompressedTexture2D_apqu2")
centered = false

[node name="fireballLabel" type="Label" parent="CanvasLayer/Control"]
visible = false
layout_mode = 0
offset_right = 48.0
offset_bottom = 23.0
text = "100"
label_settings = SubResource("LabelSettings_sml3a")
horizontal_alignment = 1

[node name="thunderIcon" type="Sprite2D" parent="CanvasLayer/Control"]
visible = false
scale = Vector2(3, 3)
texture = SubResource("CompressedTexture2D_ajs5s")
centered = false

[node name="thunderLabel" type="Label" parent="CanvasLayer/Control"]
visible = false
layout_mode = 0
offset_right = 48.0
offset_bottom = 23.0
text = "100"
label_settings = SubResource("LabelSettings_xwmqv")
horizontal_alignment = 1

[node name="laserIcon" type="Sprite2D" parent="CanvasLayer/Control"]
visible = false
scale = Vector2(3, 3)
texture = SubResource("CompressedTexture2D_njfm1")
centered = false

[node name="laserLabel" type="Label" parent="CanvasLayer/Control"]
visible = false
layout_mode = 0
offset_right = 48.0
offset_bottom = 23.0
text = "100"
label_settings = SubResource("LabelSettings_jf2ri")
horizontal_alignment = 1

[node name="voidIcon" type="Sprite2D" parent="CanvasLayer/Control"]
visible = false
scale = Vector2(3, 3)
texture = SubResource("CompressedTexture2D_xre5p")
centered = false

[node name="voidLabel" type="Label" parent="CanvasLayer/Control"]
visible = false
layout_mode = 0
offset_right = 48.0
offset_bottom = 23.0
text = "100"
label_settings = SubResource("LabelSettings_k5yc7")
horizontal_alignment = 1

[node name="poisonIcon" type="Sprite2D" parent="CanvasLayer/Control"]
visible = false
scale = Vector2(3, 3)
texture = ExtResource("4_62vww")
centered = false

[node name="poisonLabel" type="Label" parent="CanvasLayer/Control"]
visible = false
layout_mode = 0
offset_right = 48.0
offset_bottom = 28.0
text = "100"
label_settings = SubResource("LabelSettings_iv02w")
horizontal_alignment = 1

[node name="atk_damageIcon" type="Sprite2D" parent="CanvasLayer/Control"]
visible = false
scale = Vector2(2.5, 2.5)
texture = SubResource("CompressedTexture2D_b6pbi")
centered = false

[node name="atk_damageLabel" type="Label" parent="CanvasLayer/Control"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "100"
label_settings = SubResource("LabelSettings_84sxk")
horizontal_alignment = 1

[node name="atk_speedIcon" type="Sprite2D" parent="CanvasLayer/Control"]
visible = false
scale = Vector2(2.5, 2.5)
texture = SubResource("CompressedTexture2D_sj334")
centered = false

[node name="atk_speedLabel" type="Label" parent="CanvasLayer/Control"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "100"
label_settings = SubResource("LabelSettings_l4anv")
horizontal_alignment = 1

[node name="atk_countIcon" type="Sprite2D" parent="CanvasLayer/Control"]
visible = false
scale = Vector2(2.5, 2.5)
texture = SubResource("CompressedTexture2D_2qgn0")
centered = false

[node name="atk_countLabel" type="Label" parent="CanvasLayer/Control"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "100"
label_settings = SubResource("LabelSettings_fedu2")
horizontal_alignment = 1

[node name="healthIcon" type="Sprite2D" parent="CanvasLayer/Control"]
visible = false
scale = Vector2(2.5, 2.5)
texture = SubResource("CompressedTexture2D_46ydx")
centered = false

[node name="healthLabel" type="Label" parent="CanvasLayer/Control"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "100"
label_settings = SubResource("LabelSettings_iixmy")
horizontal_alignment = 1

[node name="move_speedIcon" type="Sprite2D" parent="CanvasLayer/Control"]
visible = false
scale = Vector2(2.5, 2.5)
texture = SubResource("CompressedTexture2D_2pgfj")
centered = false

[node name="move_speedLabel" type="Label" parent="CanvasLayer/Control"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "100"
label_settings = SubResource("LabelSettings_33t6d")
horizontal_alignment = 1

[node name="FpsLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "FPS: 100"
label_settings = SubResource("LabelSettings_dwdjn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FireballTimer" type="Timer" parent="."]
one_shot = true

[node name="ThunderTimer" type="Timer" parent="."]
one_shot = true

[node name="LaserTimer" type="Timer" parent="."]
one_shot = true

[node name="VoidTimer" type="Timer" parent="."]
one_shot = true

[node name="PoisonTimer" type="Timer" parent="."]
one_shot = true

[connection signal="mouse_entered" from="CanvasLayer/Control/UpgradeList/Button0" to="." method="_on_button_0_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Control/UpgradeList/Button0" to="." method="_on_button_0_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Control/UpgradeList/Button1" to="." method="_on_button_1_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Control/UpgradeList/Button1" to="." method="_on_button_1_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Control/UpgradeList/Button2" to="." method="_on_button_2_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Control/UpgradeList/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/PauseUI/PauseButtons/ContinueButton" to="CanvasLayer/Control/PauseUI" method="_on_continue_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/PauseUI/PauseButtons/ExitButton" to="CanvasLayer/Control/PauseUI" method="_on_exit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/EndUI/Back" to="CanvasLayer/Control/EndUI" method="_on_back_pressed"]
[connection signal="timeout" from="FireballTimer" to="." method="_on_fireball_timer_timeout"]
[connection signal="timeout" from="ThunderTimer" to="." method="_on_thunder_timer_timeout"]
[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="VoidTimer" to="." method="_on_void_timer_timeout"]
[connection signal="timeout" from="PoisonTimer" to="." method="_on_poison_timer_timeout"]
